tests/Checker/everything/errors/2d.vc
int a = 1;
float a = 2.0;

int main() { return 1; }
